force-app/main/default/objects/Contact/fields/Encrypted_Password__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Password__c</fullName>
    <label>Encrypted Password</label>
    <length>64</length>
    <type>Text</type>
</CustomField>