force-app/main/default/objects/Contact/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>Id Externe</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>