force-app/main/default/objects/Contact/fields/Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Inactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactivated is AXG deleted contact</description>
    <label>Inactivated</label>
    <type>Checkbox</type>
</CustomField>